--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
-streamlit==1.20.0
-numpy==1.23.5
-matplotlib==3.6.2
-seaborn==0.12.1
-pandas==1.5.2
-scikit-learn==1.2.0
+numpy==2.1.2
+pickle-mixin==1.0.2
+streamlit==1.39.0
+streamlit-option-menu==0.4.0
+scikit-learn==1.5.2
+matplotlib
+seaborn
+pandas
+
 
